# scipen-studio

./: .gitattributes  .gitignore  .oxlintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  biome.jsonc  drizzle.config.ts  electron-builder.json5  electron.vite.config.ts  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cursor/plans/: history-system.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci.yml
cli_tools/scipen-beamer/: .gitignore  .npmignore  README.md  build.mjs  package.json  tsconfig.json
cli_tools/scipen-reviewer/: .gitignore  README.md  build.mjs  package.json  tsconfig.json
cli_tools/scipen-reviewer/src/: index.ts
cli_tools/scipen_pdf2tex/: .gitignore  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
cli_tools/scipen_pdf2tex/src/: index.ts
docs/: USER_GUIDE.md  USER_GUIDE.zh-CN.md  agent-settings-mock.html  editor-mode-p0-p1-plan.md
patches/: socket.io-client+0.9.17-overleaf-5.patch
public/wasm/: stellarlatexpdftex.js  stellarlatexpdftex.wasm  stellarlatexxetex.js
public/wasm/typst-ts/: typst-compile-worker.js
scripts/: build-cli-sidecars.js  build-icon.mjs  build-snaca.js  build-workers.js  check-i18n.ts  check-no-cjk.js  copy-public-assets.js  copy-skills.js  download-busytex-wasm.js  download-marksman.js  download-texlab.js  download-tinymist.js  download-typst-wasm.js  smoke-snaca-editor.mjs
shared/: api-types.ts  index.ts
shared/ipc/: ai-contract.ts  app-contract.ts  channels.ts  client.ts  compile-contract.ts  file-contract.ts  im-contract.ts  index.ts  lsp-contract.ts  ot-contract.ts  overleaf-contract.ts  project-contract.ts  schemas.ts  types.ts  zotero-contract.ts
shared/trace/: index.ts
shared/types/: chat.ts  cli-protocol.ts  config-keys.ts  defaults.ts  index.ts  literature.ts  provider.ts  zotero-embedding.ts  zotero-events.ts  zotero-mineru.ts  zotero.ts
shared/utils/: async.ts  cancellation.ts  citeShotRegion.ts  event-buffers.ts  event.ts  index.ts  lifecycle.ts  result.ts  sectionExtract.ts  text.ts  trigram.ts
snaca/: .gitignore  Cargo.toml  README.md  snaca.toml.example
snaca/crates/snaca-editor/: Cargo.toml
snaca/crates/snaca-editor-protocol/: Cargo.toml
snaca/crates/snaca-editor-protocol/src/: codec.rs  error.rs  id.rs  jsonrpc.rs  lib.rs  routing.rs
snaca/crates/snaca-editor-protocol/src/messages/: chat.rs  composer.rs  context_req.rs  edit.rs  error_notif.rs  init.rs  inline_edit.rs  log.rs  memory.rs  mod.rs  plan.rs  session.rs  skills.rs  tool.rs  turn.rs  usage.rs
snaca/crates/snaca-editor-protocol/src/types/: capabilities.rs  config.rs  context.rs  hunk.rs  mod.rs  range.rs
snaca/crates/snaca-editor/src/: approval_gate.rs  composer.rs  config.rs  context_correlator.rs  context_inject.rs  context_requester.rs  handler.rs  llm.rs  main.rs  mcp_runtime.rs  memory_handler.rs  outbound.rs  question_gate.rs  session.rs  session_manager.rs  skills_handler.rs  turn_engine.rs  turn_listener.rs
snaca/crates/snaca-engine/: Cargo.toml
snaca/crates/snaca-memory/: Cargo.toml
snaca/crates/snaca-plugin-lark/: Cargo.toml
snaca/crates/snaca-server/: Cargo.toml
snaca/crates/snaca-state/: Cargo.toml
snaca/crates/snaca-tools/: Cargo.toml
snaca/crates/snaca-tools/src/: ask_user_question.rs  bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  ls.rs  memory.rs  multi_edit.rs  read.rs  send_file.rs  skill_tool.rs  task_output.rs  task_registry.rs  task_stop.rs  todo_write.rs  web_fetch.rs  web_search.rs  write.rs  zotero.rs
snaca/crates/snaca-workspace/: Cargo.toml
snaca/docs/: USAGE.md  editor-protocol.md  im-plugin-protocol.md
src/main/: index.ts
src/main/database/: index.ts  schema.ts
src/main/ipc/: agentHandlers.ts  aiHandlers.ts  chatHandlers.ts  collaborationOwnerHandlers.ts  compileHandlers.ts  configHandlers.ts  dialogHandlers.ts  fileBatchHandlers.ts  fileDialogHandlers.ts  fileHandlerHelpers.ts  fileHandlers.ts  fileReadWriteHandlers.ts  fileTreeHandlers.ts  historyHandlers.ts  imHandlers.ts  index.ts  inlineEditHandlers.ts  ipcSchemas.ts  knowledgeHandlers.ts  localReplicaHandlers.ts  lspHandlers.ts  otHandlers.ts  overleafHandlers.ts  overleafLiveHandlers.ts  projectBindingHandlers.ts  projectConversationHandlers.ts  selectionHandlers.ts  settingsHandlers.ts  typedIpc.ts  updateHandlers.ts  windowHandlers.ts  zoteroHandlers.ts
src/main/lsp-process/: index.ts
src/main/security/: csp.ts  index.ts  validation.ts
src/main/services/: AIService.ts  AgentService.ts  BaseLSPService.ts  CollaborationOwnerRegistry.ts  ConfigManager.ts  DocumentSession.ts  EchoSuppressor.ts  ExternalChangeDetector.ts  FileCacheService.ts  FileSystemService.ts  InlineEditService.ts  (+37 more)
src/preload/: index.ts  preload.d.ts
src/renderer/: index.html  selectionAction.html  selectionToolbar.html
tests/: performance_utils.test.ts
tests/e2e/: app.e2e.ts  workflow.e2e.ts
tests/renderer/: setup.ts
tests/setup/: MockServiceContainer.ts  index.ts
(+713 files in other folders)
