[package]
name = "snaca-editor-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA editor mode wire protocol: types, codec, dispatcher for Studio×SNACA editor sidecar"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true }
