[package]
name = "snaca-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA editor-mode sidecar binary: stdio JSON-RPC server for Studio×SNACA editor protocol"

[[bin]]
name = "snaca-editor"
path = "src/main.rs"

[dependencies]
snaca-editor-protocol.workspace = true
snaca-core.workspace = true
snaca-llm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"
