[package]
name = "snaca-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SNACA editor-mode sidecar binary: stdio JSON-RPC server for Studio×SNACA editor protocol"

[[bin]]
name = "snaca-editor"
path = "src/main.rs"

[dependencies]
snaca-editor-protocol.workspace = true
snaca-core.workspace = true
snaca-llm.workspace = true
snaca-state.workspace = true
snaca-engine.workspace = true
snaca-mcp.workspace = true
snaca-memory.workspace = true
snaca-skills.workspace = true
snaca-tools.workspace = true
snaca-tools-api.workspace = true
snaca-workspace.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
tokio-util.workspace = true
sha2 = "0.10"

[features]
default = []
# Compile the fastembed (ONNX) embedder backend into the binary. The
# model weights themselves are NOT bundled — they're downloaded on
# first use into `SCIPEN_FASTEMBED_CACHE_DIR` (or `~/.cache/fastembed/`
# when the env var is unset). Mirrors `snaca-server`'s feature shape so
# CI can drive both crates with the same flag.
fastembed = ["snaca-memory/fastembed"]

[dev-dependencies]
tempfile = "3"
